2007-01-05  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix broken path in the Webots macro.
	* webots.m4: Fix broken path.

2007-01-05  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Typo
	* webots.m4: Typo.

2007-01-05  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix Webots Macro on Mac and Windows.
	* webots.m4: Add webots path on Mac and Windows.

2007-01-04  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add a macro that check for LibUrbi.
	* liburbi.m4: Check for LibUrbi. New.

2007-01-04  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add a macro that checks for Webots.
	* openssl.m4: Typo.
	* webots.m4: Check for Webots. New.

2007-01-04  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add a macro to check for OpenSSL.
	* openssl.m4: Check for OpenSSL. New.
	* vcs/local.rb: Add my e-mail.

2006-12-29  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Remove references to restyle/reindent.
	* ChangeLog,
	* README: Here.

2006-12-29  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Remove restyle.
	Now available under common/restyle.
	* restyle: Remove.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Fix XFAIL_TESTS handling
	* build-aux/check.mk: We need to take the basename of $<.
	But that is still not right: this breaks if there are / in
	the test name.
	But that's good enough an approximation for now.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Upgrade check.mk
	* check.mk (am__rst_section, am__rst_subsection)
	(am__text_box, am__check_pre, am__check_post): New.
	Use the latter two to factor the log production rules.
	Use the former ones to improve the Rst output of the log.

2006-12-28  POTHIER Benoit  <benoit.pothier@gmx.net>

	Fix header inclusion in test for qscintilla presence. 
	* qscintilla2.m4: Prepend Qsci subdir in include.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	Produce a Rst ready log
	* check.mk: here.

2006-12-23  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
